ShenandoahSafepoint::is_at_shenandoah_safepoint should not access VMThread state from other threads

XMLWordPrintable

    • b18
    • Not verified

        The following tests fail with debug VMs:

        compiler/c1/TestLinearScanOrderMain.java
        gc/CriticalNativeArgs.java#id1
        gc/TestHumongousReferenceObject.java#id2
        gc/TestSystemGC.java#id3
        gc/class_unloading/TestClassUnloadingDisabled.java#id3
        gc/ergonomics/TestDynamicNumberOfGCThreads.java
        gc/logging/TestGCId.java
        gc/metaspace/TestMetaspacePerfCounters.java#id3
        gc/shenandoah/TestSmallHeap.java
        gc/shenandoah/compiler/TestC1ArrayCopyNPE.java
        gc/shenandoah/compiler/TestC1VectorizedMismatch.java
        gc/shenandoah/compiler/TestClone.java#id0
        gc/shenandoah/compiler/TestClone.java#id1
        gc/shenandoah/compiler/TestClone.java#id2
        gc/shenandoah/compiler/TestClone.java#id3
        gc/shenandoah/compiler/TestClone.java#id4
        gc/shenandoah/compiler/TestClone.java#id5
        gc/shenandoah/compiler/TestReferenceCAS.java#id0
        gc/shenandoah/compiler/TestReferenceCAS.java#id1
        gc/shenandoah/mxbeans/TestChurnNotifications.java#id0
        gc/shenandoah/mxbeans/TestChurnNotifications.java#id1
        gc/shenandoah/mxbeans/TestChurnNotifications.java#id2
        gc/shenandoah/mxbeans/TestChurnNotifications.java#id3
        gc/shenandoah/mxbeans/TestChurnNotifications.java#id4
        gc/shenandoah/mxbeans/TestChurnNotifications.java#id5
        gc/shenandoah/mxbeans/TestPauseNotifications.java#id0
        gc/shenandoah/mxbeans/TestPauseNotifications.java#id1
        gc/shenandoah/mxbeans/TestPauseNotifications.java#id2
        gc/shenandoah/mxbeans/TestPauseNotifications.java#id3
        gc/shenandoah/mxbeans/TestPauseNotifications.java#id4
        gc/shenandoah/mxbeans/TestPauseNotifications.java#id5
        gc/shenandoah/oom/TestAllocLargeObj.java
        gc/shenandoah/oom/TestAllocLargerThanHeap.java
        gc/shenandoah/oom/TestAllocSmallObj.java
        gc/shenandoah/oom/TestClassLoaderLeak.java
        gc/shenandoah/oom/TestThreadFailure.java
        gc/shenandoah/options/TestArgumentRanges.java
        gc/shenandoah/options/TestExplicitGC.java
        gc/shenandoah/options/TestHeuristicsUnlock.java
        gc/shenandoah/options/TestHumongousMoves.java
        gc/shenandoah/options/TestPacing.java
        gc/shenandoah/options/TestParallelRegionStride.java
        gc/shenandoah/options/TestSingleThreaded.java
        gc/shenandoah/options/TestSoftMaxHeapSize.java
        gc/stress/CriticalNativeStress.java#id1
        java/lang/invoke/RicochetTest.java


        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/jdk/src/hotspot/share/runtime/vmThread.hpp:103), pid=2517, tid=2564
        # assert(Thread::current()->is_VM_thread()) failed: Must be
        #
        # JRE version: OpenJDK Runtime Environment (16.0) (fastdebug build 16-internal+0-adhoc..jdk)

              Assignee:
              Aleksey Shipilev
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: