8253778: ShenandoahSafepoint::is_at_shenandoah_safepoint should not access VMThread state from other threads